@@ -57,7 +57,7 @@ body {behavior: url(themes/curve/csshover3.htc );}
     <div id="cpg_main_block_outer">
         <div class="cpg_main_block_inner">
             {GALLERY}
-            <br /> <!-- workaround for issue 64492 - do not remove! -->
+            <br /> <!-- workaround for issue 64492 - do not remove the line break! -->
         </div>
     </div>
     <div id="cpg_footer_block_outer">
